--- a/filial.html
+++ b/filial.html
@@ -304,6 +304,10 @@
         </div>
 
 
+        <!-- Schema -->
+        <div class="schema-filial">
+            <img src="./assets/image/filial/mitino.png" alt="" />
+        </div>
 
         <!-- Address school -->
 
