--- a/filial3.html
+++ b/filial3.html
@@ -166,7 +166,11 @@
                                 <span>Директор школ Smart Education в Нижнем Новгороде</span>
                             </div>
                         </div>
-                        <p>Первое, что что Вы заметите, придя в школу Smart Education на улице М. Горького, — это особая атмосфера. Здесь вас встретят люди, влюбленные в свое дело. Чтобы добиться высоких результатов в обучении наших студентов мы объединяем наш опыт, современные программы, увлеченность, хорошее настроение и даже азарт! <b>We love English!</b> И эта искренняя любовь замотивирует вас и ваших детей на новые лингвистические подвиги! <b>Welcome!</b></p>
+                        <p>Первое, что что Вы заметите, придя в школу Smart Education на улице М. Горького, — это особая
+                            атмосфера. Здесь вас встретят люди, влюбленные в свое дело. Чтобы добиться высоких
+                            результатов в обучении наших студентов мы объединяем наш опыт, современные программы,
+                            увлеченность, хорошее настроение и даже азарт! <b>We love English!</b> И эта искренняя
+                            любовь замотивирует вас и ваших детей на новые лингвистические подвиги! <b>Welcome!</b></p>
                     </div>
                 </div>
                 <div class="teacher-about-filial-item-wrap">
@@ -178,12 +182,16 @@
                                 <span>Академический директор школы Smart Education, филиал Горьковский</span>
                             </div>
                         </div>
-                        <p>Стать преподавателем Smart Education непросто. Нужно иметь многолетний опыт работы, высшее педагогическое образование, кембриджские сертификаты TKT и САЕ. Но это только основа, видимая часть айсберга! Главное вы увидите на уроках: <b>мы превращаем язык из скучного школьного предмета в средство общения.</b> А как это нам удается — вот главное волшебство, дар, которым должен обладать настоящий преподаватель!</p>
+                        <p>Стать преподавателем Smart Education непросто. Нужно иметь многолетний опыт работы, высшее
+                            педагогическое образование, кембриджские сертификаты TKT и САЕ. Но это только основа,
+                            видимая часть айсберга! Главное вы увидите на уроках: <b>мы превращаем язык из скучного
+                                школьного предмета в средство общения.</b> А как это нам удается — вот главное
+                            волшебство, дар, которым должен обладать настоящий преподаватель!</p>
                     </div>
                 </div>
             </div>
         </div>
-        
+
 
         <!-- Gallery filial -->
         <div class="filial-gallery">
@@ -207,40 +215,49 @@
             <div class="filial-teacher-wrap">
                 <h2 class="green">Преподаватели</h2>
                 <div class="filial-teacher-slider">
-                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="500">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200"
+                        data-aos-duration="500">
                         <img src="./assets/image/home/teacher/1.png" />
                         <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                     </div>
-                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="600">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200"
+                        data-aos-duration="600">
                         <img src="./assets/image/home/teacher/2.png" />
                         <h4 class="red">Мария суетнова</h4>
                     </div>
-                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="700">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200"
+                        data-aos-duration="700">
                         <img src="./assets/image/home/teacher/3.png" />
                         <h4 class="red">карина мамонова</h4>
                     </div>
-                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="800">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200"
+                        data-aos-duration="800">
                         <img src="./assets/image/home/teacher/4.png" />
                         <h4 class="red">Анастасия сёмина</h4>
                     </div>
-                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="900">
-                        <img src="./assets/image/home/teacher/1.png"  />
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200"
+                        data-aos-duration="900">
+                        <img src="./assets/image/home/teacher/1.png" />
                         <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                     </div>
-                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">
-                        <img src="./assets/image/home/teacher/2.png"  />
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200"
+                        data-aos-duration="1000">
+                        <img src="./assets/image/home/teacher/2.png" />
                         <h4 class="red">Мария суетнова</h4>
                     </div>
-                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="500">
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200"
+                        data-aos-duration="500">
                         <img src="./assets/image/home/teacher/4.png" />
                         <h4 class="red">Анастасия сёмина</h4>
                     </div>
-                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="600">
-                        <img src="./assets/image/home/teacher/1.png"  />
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200"
+                        data-aos-duration="600">
+                        <img src="./assets/image/home/teacher/1.png" />
                         <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                     </div>
-                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="700">
-                        <img src="./assets/image/home/teacher/2.png"  />
+                    <div class="filial-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200"
+                        data-aos-duration="700">
+                        <img src="./assets/image/home/teacher/2.png" />
                         <h4 class="red">Мария суетнова</h4>
                     </div>
                 </div>
@@ -250,60 +267,52 @@
         <!-- Whom suit -->
         <div class="course-suit filial">
             <div class="filial-suit_all-wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="300">Занятия в школе</h2>
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="300">Занятия в школе
+                </h2>
                 <div class="filial-suit-gallery">
-                    <div class="filial-suit-gallery-item item1" style="background-image: url(./assets/image/filial/suit/1.png);"></div>
-                    <div class="filial-suit-gallery-item item2" style="background-image: url(./assets/image/filial/suit/2.png);"></div>
-                    <div class="filial-suit-gallery-item item3" style="background-image: url(./assets/image/filial/suit/3.png);"></div>
-                    <div class="filial-suit-gallery-item item4" style="background-image: url(./assets/image/filial/suit/4.png);"></div>
-                    <div class="filial-suit-gallery-item item5" style="background-image: url(./assets/image/filial/suit/5.png);"></div>
-                    <div class="filial-suit-gallery-item item6" style="background-image: url(./assets/image/filial/suit/6.png);"></div>
-                    <div class="filial-suit-gallery-item item7" style="background-image: url(./assets/image/filial/suit/7.png);"></div>
+                    <div class="filial-suit-gallery-item item1"
+                        style="background-image: url(./assets/image/filial/suit/1.png);"></div>
+                    <div class="filial-suit-gallery-item item2"
+                        style="background-image: url(./assets/image/filial/suit/2.png);"></div>
+                    <div class="filial-suit-gallery-item item3"
+                        style="background-image: url(./assets/image/filial/suit/3.png);"></div>
+                    <div class="filial-suit-gallery-item item4"
+                        style="background-image: url(./assets/image/filial/suit/4.png);"></div>
+                    <div class="filial-suit-gallery-item item5"
+                        style="background-image: url(./assets/image/filial/suit/5.png);"></div>
+                    <div class="filial-suit-gallery-item item6"
+                        style="background-image: url(./assets/image/filial/suit/6.png);"></div>
+                    <div class="filial-suit-gallery-item item7"
+                        style="background-image: url(./assets/image/filial/suit/7.png);"></div>
                 </div>
             </div>
         </div>
 
 
         <!-- Course test -->
-        <div class="course-test filial" >
+        <div class="course-test filial">
             <div class="course-test_wrap">
-                <h2 data-aos="fade-right" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">Записаться на визит<br />в школу
+                <h2 data-aos="fade-right" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">Записаться
+                    на визит<br />в школу
                 </h2>
                 <form class="flex">
-                    <input 
-                        data-aos="fade-up" 
-                        data-aos-once="true" 
-                        data-aos-offset="250" 
-                        data-aos-duration="700" 
-                        type="text" 
-                        placeholder="Имя" />
-                    <input 
-                        data-aos="fade-up" 
-                        data-aos-once="true" 
-                        data-aos-offset="250" 
-                        data-aos-duration="900" 
-                        type="text" 
-                        placeholder="E-mail" />
-                    <input 
-                        data-aos="fade-up" 
-                        data-aos-once="true" 
-                        data-aos-offset="250" 
-                        data-aos-duration="1000" 
-                        type="text" 
-                        placeholder="Телефон" />
-                    <input 
-                        data-aos="fade-up" 
-                        data-aos-once="true" 
-                        data-aos-offset="250" 
-                        data-aos-duration="1100" 
-                        type="submit"
-                        value="Отправть" />
+                    <input data-aos="fade-up" data-aos-once="true" data-aos-offset="250" data-aos-duration="700"
+                        type="text" placeholder="Имя" />
+                    <input data-aos="fade-up" data-aos-once="true" data-aos-offset="250" data-aos-duration="900"
+                        type="text" placeholder="E-mail" />
+                    <input data-aos="fade-up" data-aos-once="true" data-aos-offset="250" data-aos-duration="1000"
+                        type="text" placeholder="Телефон" />
+                    <input data-aos="fade-up" data-aos-once="true" data-aos-offset="250" data-aos-duration="1100"
+                        type="submit" value="Отправть" />
                 </form>
             </div>
         </div>
 
 
-
+        <!-- Schema -->
+        <div class="schema-filial">
+            <img src="./assets/image/filial/gor.png" alt="" />
+        </div>
         <!-- Address school -->
 
 
