--- a/filial2.html
+++ b/filial2.html
@@ -303,6 +303,11 @@
         </div>
 
 
+        <!-- Schema -->
+        <div class="schema-filial" >
+            <img src="./assets/image/filial/cherem.png" alt="" />
+        </div>
+
 
         <!-- Address school -->
 
