--- a/filial4.html
+++ b/filial4.html
@@ -302,6 +302,11 @@
             </div>
         </div>
 
+        <!-- Schema -->
+        <div class="schema-filial" >
+            <img src="./assets/image/filial/len.png" alt="" />
+        </div>
+
 
 
         <!-- Address school -->
