--- a/filial3.html
+++ b/filial3.html
@@ -293,7 +293,7 @@
         <div class="course-test filial">
             <div class="course-test_wrap">
                 <h2 data-aos="fade-right" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">Записаться
-                    на визит<br />в школу
+                    на визит в школу
                 </h2>
                 <form class="flex">
                     <input data-aos="fade-up" data-aos-once="true" data-aos-offset="250" data-aos-duration="700"
