--- a/filial4.html
+++ b/filial4.html
@@ -267,7 +267,7 @@
         <!-- Course test -->
         <div class="course-test filial" >
             <div class="course-test_wrap">
-                <h2 data-aos="fade-right" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">Записаться на визит<br />в школу
+                <h2 data-aos="fade-right" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">Записаться на визит в школу
                 </h2>
                 <form class="flex">
                     <input 
